--- a/_posts/2022-02-13-software.md
+++ b/_posts/2022-02-13-software.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Software Installation
+title: Software Installation (TEST UPDATE)
 ---
 
 The purpose of this exercise is to get you set up with the software tools we'll use in PIC16B, including Anaconda, git + GitHub, and Jekyll. 
