added summary of plots

--- a/_posts/2022-04-06-blog-post0.md
+++ b/_posts/2022-04-06-blog-post0.md
@@ -40,3 +40,5 @@ plt.suptitle('Penguins Density of Flipper Length and Body Mass per Species')
 plt.savefig("penguins_histogram.png")
 ```
 ![penguins_histogram.png](/images/penguins_histogram.png)
+
+As seen in the above histograms, there are some clear differences in the general size of the penguins. Specifically, Gentoo penguins are generally larger as the majority of the Gentoo penguins have a heavier body mass and longer flippers. However, there is some clear overlap between Adelie and Chinstrap penguins in regards to both Flipper Length and Body Mass. Thus, more analysis would provide us with a better understanding of the differences between each species of penguin.
