--- a/_posts/2022-04-15-blog-post1.md
+++ b/_posts/2022-04-15-blog-post1.md
@@ -529,7 +529,7 @@ fig.show()
 ## Create Two More Interesting Figures
 
 Finally, I will create additional figures by writing new query functions and then displaying corresponding figures to explain my results. I will be answering the following questions with these results:
-1. ***What have the hottest and coldest countries in the world over a certain time period?***
+1. ***What have been the hottest and coldest countries in the world over a certain time period?***
 2. ***Over the years, how has the temperature differed in each month in certain countries?***
 
 First, I will answer question 1.
