--- a/_posts/2022-04-15-blog-post1.md
+++ b/_posts/2022-04-15-blog-post1.md
@@ -585,9 +585,10 @@ def choropleth_plot(year_begin, year_end, **kwargs):
     fig.update_layout(margin={"r":0,"t":0,"l":0,"b":0})
     return(fig)
 
-choropleth_plot(year_begin = 1970, year_end = 2015)
+fig = choropleth_plot(year_begin = 1970, year_end = 2015)
+fig.show()
 ```
-{% include choropleth.html %}
+{% include temp_choropleth.html %}
 
 This choropleth plot displays the different temperatures from the period of 1970-2015 in all  countries worldwide. We can see that Antarctica has easily been the coldest country while Yemen has been the hottest, alongside many African countries.
 
@@ -638,9 +639,10 @@ def temp_line_plot(country1, country2, year_begin, year_end, **kwargs):
                   **kwargs)
 
     fig.update_layout(margin={"r":0,"t":0,"l":0,"b":0})
-    fig.show()
+    return(fig)
 
-temp_line_plot("Russia", "Argentina", 1980, 2020)
+fig = temp_line_plot("Russia", "Argentina", 1980, 2020)
+fig.show()
 ```
 {% include temp_line.html %}
 It is clear that in Russia, January is generally the coldest and July tends to be the warmest. This makes sense as Russia lies in the Northern Hemisphere, so January lies in the middle of winter and July lies in the middle of Summer. Conversely, in Argentina, January tends to be the warmest and July is generally the coldest. This also makes sense as Argentina lies in the Southern Hemisphere, so seasons are opposite as January is in the summer and July is in the winter.
