fixed plots again

--- a/_posts/2022-04-15-blog-post1.md
+++ b/_posts/2022-04-15-blog-post1.md
@@ -582,11 +582,10 @@ def choropleth_plot(year_begin, year_end, **kwargs):
                         height = 300,
                         title = "Mean temperature across countries, years " + str(year_begin) + "-" + str(year_end),
                         **kwargs)
-    fig.update_layout(margin={"r":0,"t":0,"l":0,"b":0})
+    fig.update_layout(margin={"r":0,"t":50,"l":0,"b":0})
     return(fig)
 
-fig = choropleth_plot(year_begin = 1970, year_end = 2015)
-fig.show()
+choropleth_plot(year_begin = 1970, year_end = 2015)
 ```
 {% include temp_choropleth.html %}
 
@@ -638,11 +637,10 @@ def temp_line_plot(country1, country2, year_begin, year_end, **kwargs):
                   height = 300,
                   **kwargs)
 
-    fig.update_layout(margin={"r":0,"t":0,"l":0,"b":0})
+    fig.update_layout(margin={"r":0,"t":50,"l":0,"b":0})
     return(fig)
 
-fig = temp_line_plot("Russia", "Argentina", 1980, 2020)
-fig.show()
+temp_line_plot("Russia", "Argentina", 1980, 2020)
 ```
 {% include temp_line.html %}
 It is clear that in Russia, January is generally the coldest and July tends to be the warmest. This makes sense as Russia lies in the Northern Hemisphere, so January lies in the middle of winter and July lies in the middle of Summer. Conversely, in Argentina, January tends to be the warmest and July is generally the coldest. This also makes sense as Argentina lies in the Southern Hemisphere, so seasons are opposite as January is in the summer and July is in the winter.
