add css screencap

--- a/_posts/2022-06-01-blog-post5.md
+++ b/_posts/2022-06-01-blog-post5.md
@@ -224,3 +224,7 @@ This is what the Submit page looks like when the user is submitting their messag
 
 This is what the View page looks like when the user is viewing five random messages.
 ![view.png](/images/view.png)
+
+This is my updated style.css file with changes to the background color and family of the font on the Web App!
+
+![css.png](/images/css.png)
